--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,228 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
+<ion-header class="header" mode="ios">
+  <ion-toolbar color="danger">
+    <ion-title class="text-light ion-padding-center">CarRental
+      <ion-fab horizontal="end">
+        <ion-fab-button class="fab-small" size="small" color="light" id="alignment-button">
+          <ion-icon color="danger" name="notifications"></ion-icon>
+        </ion-fab-button>
+        <ion-popover trigger="alignment-button" [dismissOnSelect]="true">
+          <ng-template>
+            <ion-content>
+              <ion-list>
+                <ion-item [button]="true" [detail]="true" id="nested-trigger">
+                  <ion-label>การชำระเงินสำเร็จ</ion-label>
+                </ion-item>
+                <ion-popover trigger="nested-trigger" [dismissOnSelect]="true" side="end">
+                </ion-popover>
+                <ion-item [button]="true" [detail]="true" id="nested-trigger">
+                  <ion-label>คุณได้ทำการเช่ารถ</ion-label>
+                </ion-item>
+                <ion-popover trigger="nested-trigger" [dismissOnSelect]="true" side="end">
+                </ion-popover>
+              </ion-list>
+            </ion-content>
+          </ng-template>
+        </ion-popover>
+      </ion-fab>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-card-content color="tertiary">
+      <div class="ion-no-margin">
+        <ion-card color="tertiary" class="ion-no-padding border-radius">
+          <ion-card-header>
+            <ion-label>
+              <h2><b>ค้นหารถ</b></h2>
+            </ion-label>
+          </ion-card-header>
+
+          <!-- เลือกคนขับ -->
+          <ion-radio-group mode="md" color="tertiary" >
+            <ion-item color="tertiary" >
+              <ion-label>
+                <h3><b>ขับเอง</b></h3>
+              </ion-label>
+              <ion-radio slot="start" value="true"></ion-radio>
+              <ion-item color="tertiary" >
+                <ion-label>
+                  <h3><b>พร้อมคนขับ</b></h3>
+                </ion-label>
+                <ion-radio slot="start" value="false"></ion-radio>
+              </ion-item>
+            </ion-item>
+          </ion-radio-group>
+          <!-- ******************************** -->
+
+          <!-- ค้นหารถ -->
+          <ion-item color="tertiary">
+            <ion-searchbar placeholder="ตำแหน่งรับรถ"></ion-searchbar>
+          </ion-item>
+          <!-- ******************************** -->
+
+          <!-- ประเภทรถ -->
+          <ion-grid>
+            <ion-row size="3">
+              <ion-col>
+                <ion-item color="tertiary">
+                  <ion-label class="ion-margin-start">
+                    <h3><b>รถเก๋ง</b></h3>
+                  </ion-label>
+                  <ion-checkbox slot="start" color="primary" mode="md" class="ion-no-margin">
+                  </ion-checkbox>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item color="tertiary">
+                  <ion-label class="ion-margin-start">
+                    <h3><b>รถกระบะ</b></h3>
+                  </ion-label>
+                  <ion-checkbox slot="start" color="primary" mode="md" class="ion-no-margin">
+                  </ion-checkbox>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item color="tertiary">
+                  <ion-label class="ion-margin-start">
+                    <h3><b>รถSUV</b></h3>
+                  </ion-label>
+                  <ion-checkbox slot="start" color="primary" mode="md" class="ion-no-margin">
+                  </ion-checkbox>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <!-- ******************************** -->
+
+          <!-- ยี่ห้อรถ -->
+          <ion-item color="tertiary">
+            <ion-label>
+              <h4><b>ยี่ห้อรถ</b>(ถ้ามี)</h4>
+            </ion-label>
+            <ion-select multiple="true" cancelText="Nah" okText="Okay!">
+              <ion-select-option value="bacon">Bacon</ion-select-option>
+              <ion-select-option value="olives">Black Olives</ion-select-option>
+              <ion-select-option value="xcheese">Extra Cheese</ion-select-option>
+              <ion-select-option value="peppers">Green Peppers</ion-select-option>
+              <ion-select-option value="mushrooms">Mushrooms</ion-select-option>
+              <ion-select-option value="onions">Onions</ion-select-option>
+              <ion-select-option value="pepperoni">Pepperoni</ion-select-option>
+              <ion-select-option value="pineapple">Pineapple</ion-select-option>
+              <ion-select-option value="sausage">Sausage</ion-select-option>
+              <ion-select-option value="Spinach">Spinach</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <!-- ******************************** -->
+
+          <!-- วันที่เช่า -->
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-item button="true" id="open-date-input" color="tertiary">
+                  <h4><b>วันที่เช่า</b></h4>
+                  <ion-popover trigger="open-date-input" show-backdrop="false">
+                    <ng-template>
+                      <ion-datetime #popoverDatetime presentation="date"
+                        ></ion-datetime>
+                    </ng-template>
+                  </ion-popover>
+                </ion-item>
+              </ion-col>
+              <ion-col>
+                <ion-item button="true" id="open-date-input" color="tertiary">
+                  <h4><b>วันที่คืน</b></h4>
+                  <ion-popover trigger="open-date-input" show-backdrop="false">
+                    <ng-template>
+                      <ion-datetime #popoverDatetime presentation="date"></ion-datetime>
+                    </ng-template>
+                  </ion-popover>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <!-- ******************************** -->
+
+          <ion-item color="tertiary">
+            <h4><b>ช่วงอายุของคนขับ</b></h4>
+            <ion-segment color="danger">
+              <ion-segment-button value="standard">
+                <ion-label>18-29</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="hybrid">
+                <ion-label>30-70</ion-label>
+              </ion-segment-button>
+              <ion-segment-button value="sat">
+                <ion-label>71+</ion-label>
+              </ion-segment-button>
+            </ion-segment>
+          </ion-item>
+          <br>
+          <ion-button color="danger" class="ion-no-margin" expand="full" type="submit" routerLink="/select-car">ค้นหา
+          </ion-button>
+        </ion-card>
+      </div>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content color="tertiary" >
+    <ion-slides>
+      <ion-slide>
+        <div class="slide">
+          <ion-card color="tertiary" class="ion-no-padding border-radius" routerLink="/car-promotion">
+            <img src="https://img.salehere.co.th/p/1200x0/2022/01/12/ctdfvsiespjv.jpg">
+            <ion-card color="tertiary" >
+              <ion-label >
+                <h2>&nbsp;อุ่นใจทุกทริป เช่ารถขับเอง  สิทธิพิเศษลูกค้าเอไอเอส  เริ่มต้น 699.-</h2><br>
+              </ion-label>
+            </ion-card>
+          </ion-card>
+        </div>
+      </ion-slide>
+      
+       <ion-slide>
+        <div class="ion-no-margin">
+          <ion-card color="tertiary" class="ion-no-padding border-radius" routerLink="/car-promotion">
+            <img src="https://bookings.co.th/wp-content/uploads/%E0%B8%AB%E0%B8%A2%E0%B8%B8%E0%B8%94%E0%B8%A2%E0%B8%B2%E0%B8%A7%E0%B8%99%E0%B8%B5%E0%B9%89-%E0%B8%A3%E0%B8%B5%E0%B8%9A%E0%B8%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%96%E0%B9%80%E0%B8%8A%E0%B9%88%E0%B8%B2%E0%B8%A5%E0%B9%88%E0%B8%A7%E0%B8%87%E0%B8%AB%E0%B8%99%E0%B9%89%E0%B8%B2%E0%B8%97%E0%B8%B5%E0%B9%88-Drivehub.jpg">
+            <ion-card color="tertiary" >
+              <ion-label >
+                <h2>&nbsp;โปรโมชั่น รับวันหยุดยาวนี้ จองรถเช่าราคาเริ่มต้น 500.-</h2><br>
+              </ion-label>
+            </ion-card>
+          </ion-card>
+        </div>
+    </ion-slide>
+    </ion-slides>
+  </ion-card-content>
+   </ion-card>
 </ion-content>
+
+<ion-footer class="ion-no-border">
+  <ion-button  color="tertiary" expand="full" ><!-- แถบด้านล่าง -->
+    <ion-tabs >
+      <ion-tab-bar slot="bottom" color="tertiary">
+        <ion-tab-button  routerLink="/home">
+          <ion-icon name="home"></ion-icon>
+          <ion-label>หน้าหลัก</ion-label>
+        </ion-tab-button>
+  
+        <ion-tab-button routerLink="/car-promotion">
+          <ion-icon name="pricetag"></ion-icon>
+          <ion-label>ดีล</ion-label>
+        </ion-tab-button>
+  
+        <ion-tab-button  routerLink="/my-booking">
+          <ion-icon name="car"></ion-icon>
+          <ion-label>การจองของฉัน</ion-label>
+        </ion-tab-button>
+        <ion-tab-button  routerLink="/my-account">
+          <ion-icon name="person"></ion-icon>
+          <ion-label>บัญชี</ion-label>
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-tabs>
+    <!-- ******************************** --></ion-button>
+</ion-footer>
