--- a/src/app/air-ticket/air-ticket.page.html
+++ b/src/app/air-ticket/air-ticket.page.html
@@ -154,12 +154,12 @@
               </ion-select>
             </ion-item>
             <ion-item slot="header" color="tertiary" lines="full" mode="md">
-              <ion-checkbox slot="start"></ion-checkbox>
+              <ion-checkbox (click)="p0Prompt($event)" slot="start"></ion-checkbox>
               <ion-label>
                 ผู้ใหญ่ (12ปีขึ้นไป)
               </ion-label>
               <ion-label slot="end">
-                5 คน
+                {{people0}} คน
               </ion-label>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
@@ -167,18 +167,18 @@
                 <h3>เด็ก (2-11ปี)</h3>
               </ion-label>
               <ion-label slot="end">
-                5 คน
+                {{people1}} คน
               </ion-label>
-              <ion-checkbox slot="start"></ion-checkbox>
+              <ion-checkbox (click)="p1Prompt($event)"  slot="start"></ion-checkbox>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
               <ion-label>
                 <h3>ทารก (น้อยกว่า2ปี)</h3>
               </ion-label>
               <ion-label slot="end">
-                5 คน
+                {{people2}} คน
               </ion-label>
-              <ion-checkbox slot="start"></ion-checkbox>
+              <ion-checkbox (click)="p2Prompt($event)" slot="start"></ion-checkbox>
             </ion-item>
 
             <ion-accordion-group color="tertiary" mode="ios">
