--- a/src/app/air-oneway-payment/air-oneway-payment.page.html
+++ b/src/app/air-oneway-payment/air-oneway-payment.page.html
@@ -31,6 +31,7 @@
                     <ion-label>
                       <h4 class="line-height2">
                         <p>รายละเอียดราคา (เที่ยวบินขาไป)</p>
+                        <p>ท่าอากาศยานขอนแก่น > ท่าอากาศยานสุวรรณภูมิ</p>
                         <p>(วันอาทิตย์ 5 มิถุนายน 2022)</p>
                       </h4>
                     </ion-label>
@@ -92,13 +93,9 @@
             </ion-item>
           </ion-list>
 
-          
-
           <ion-list>
-                   <ion-item lines="full " style="text-align: center;" color="tertiary">
-              <ion-text style="color: red;">
-                รวมทั้งหมด 4,044 บาท
-              </ion-text>
+            <ion-item lines="full " style="text-align: center" color="tertiary">
+              <ion-text style="color: red"> รวมทั้งหมด 490 บาท </ion-text>
             </ion-item>
           </ion-list>
           <ion-button
