--- a/src/app/air-ticket/air-ticket.page.html
+++ b/src/app/air-ticket/air-ticket.page.html
@@ -154,31 +154,28 @@
               </ion-select>
             </ion-item>
             <ion-item slot="header" color="tertiary" lines="full" mode="md">
-              <ion-checkbox (click)="p0Prompt($event)" slot="start"></ion-checkbox>
-              <ion-label>
-                ผู้ใหญ่ (12ปีขึ้นไป)
-              </ion-label>
-              <ion-label slot="end">
-                {{people0}} คน
-              </ion-label>
+              <ion-checkbox
+                (click)="p0Prompt($event)"
+                slot="start"
+              ></ion-checkbox>
+              <ion-label> ผู้ใหญ่ (12ปีขึ้นไป) </ion-label>
+              <ion-label slot="end"> {{people0}} คน </ion-label>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
-              <ion-label>
-                <h3>เด็ก (2-11ปี)</h3>
-              </ion-label>
-              <ion-label slot="end">
-                {{people1}} คน
-              </ion-label>
-              <ion-checkbox (click)="p1Prompt($event)"  slot="start"></ion-checkbox>
+              <ion-label> เด็ก (2-11ปี) </ion-label>
+              <ion-label slot="end"> {{people1}} คน </ion-label>
+              <ion-checkbox
+                (click)="p1Prompt($event)"
+                slot="start"
+              ></ion-checkbox>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
-              <ion-label>
-                <h3>ทารก (น้อยกว่า2ปี)</h3>
-              </ion-label>
-              <ion-label slot="end">
-                {{people2}} คน
-              </ion-label>
-              <ion-checkbox (click)="p2Prompt($event)" slot="start"></ion-checkbox>
+              <ion-label> ทารก (น้อยกว่า2ปี) </ion-label>
+              <ion-label slot="end"> {{people2}} คน </ion-label>
+              <ion-checkbox
+                (click)="p2Prompt($event)"
+                slot="start"
+              ></ion-checkbox>
             </ion-item>
 
             <ion-accordion-group color="tertiary" mode="ios">
@@ -329,30 +326,18 @@
             </ion-item>
 
             <ion-item color="tertiary" lines="full" mode="md">
-              <ion-label>
-                <h3>ผู้ใหญ่ (12ปีขึ้นไป)</h3>
-              </ion-label>
-              <ion-label slot="end">
-                5 คน
-              </ion-label>
+              <ion-label> ผู้ใหญ่ (12ปีขึ้นไป) </ion-label>
+              <ion-label slot="end"> 5 คน </ion-label>
               <ion-checkbox slot="start"></ion-checkbox>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
-              <ion-label>
-                <h3>เด็ก (2-11ปี)</h3>
-              </ion-label>
-              <ion-label slot="end">
-                5 คน
-              </ion-label>
+              <ion-label> เด็ก (2-11ปี) </ion-label>
+              <ion-label slot="end"> 5 คน </ion-label>
               <ion-checkbox slot="start"></ion-checkbox>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
-              <ion-label>
-                <h3>ทารก (น้อยกว่า2ปี)</h3>
-              </ion-label>
-              <ion-label slot="end">
-                5 คน
-              </ion-label>
+              <ion-label> ทารก (น้อยกว่า2ปี) </ion-label>
+              <ion-label slot="end"> 5 คน </ion-label>
               <ion-checkbox slot="start"></ion-checkbox>
             </ion-item>
 
