--- a/src/app/air-twoway-payment/air-twoway-payment.page.html
+++ b/src/app/air-twoway-payment/air-twoway-payment.page.html
@@ -31,6 +31,7 @@
                     <ion-label>
                       <h4 class="line-height2">
                         <p>รายละเอียดราคา (เที่ยวบินขาไป)</p>
+                        <p>ท่าอากาศยานขอนแก่น > ท่าอากาศยานสุวรรณภูมิ</p>
                         <p>(วันอาทิตย์ 5 มิถุนายน 2022)</p>
                       </h4>
                     </ion-label>
@@ -117,6 +118,7 @@
                     <ion-label>
                       <h4 class="line-height2">
                         <p>รายละเอียดราคา (เที่ยวบินขากลับ)</p>
+                        <p>ท่าอากาศยานสุวรรณภูมิ > ท่าอากาศยานขอนแก่น</p>
                         <p>(วันศุกร์ 10 มิถุนายน 2022)</p>
                       </h4>
                     </ion-label>
