--- a/src/app/hotel/hotel.page.html
+++ b/src/app/hotel/hotel.page.html
@@ -1,30 +1,75 @@
+<!--Select Hotel-->
 <ion-header class="header" mode="ios">
   <ion-toolbar color="danger">
     <ion-buttons slot="start">
       <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
     </ion-buttons>
-    <ion-title class="text-light ion-padding-center"
-      >Hotel Booking
-    </ion-title>
+    <ion-title class="text-light ion-padding-center">Select Hotel </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-<ion-searchbar mode="ios"></ion-searchbar>
+<ion-content mode="md">
 
   <ion-card>
     <ion-card-content color="tertiary">
       <div class="ion-no-margin">
         <ion-card color="tertiary" class="ion-no-padding border-radius">
-          <img
-            src="https://t-cf.bstatic.com/xdata/images/hotel/max1024x768/274006931.jpg?k=303773db63893319db96b8b840968d6f54620d9027a5fbcb9547174bdd568b7d&o=&hp=1"
-          />
-          <ion-card-title>Rimtalay Resort Koh Larn</ion-card-title>
-            <ion-card-subtitle>ริมทะเล รีสอร์ท</ion-card-subtitle>
-          <ion-card-content>
-            Rimtalay Resort Koh Larn ตั้งอยู่บริเวณหาดตายายของเกาะล้าน
-            ห่างจากท่าเรือหน้าบ้านไม่เกิน 900 ม. และห่างจากหาดตายาย 600 ม.
-          </ion-card-content>
+          <img src="https://pix8.agoda.net/hotelImages/28133688/0/d2cc901ed61461e33e24892e79e3a981.jpg?ca=22&ce=0&s=1024x768" />
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6">
+                <ion-label>
+                  <h2><b>Ma-Du-EI zen Resort</b></h2>
+                  <h2>มาดูอิเซนส์ รีสอร์ต</h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="6">
+                <ion-label>
+                  <h3 class="ion-text-right">
+                    <ion-text color="danger">
+                      <h2>
+                        <b>10,245</b><small>&nbsp;THB</small><span>/คืน/ห้อง</span>
+                      </h2>
+                    </ion-text>
+                    <ion-text color="medium">
+                      ราคารวมภาษีแล้ว
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-icon name="pin-outline"></ion-icon>
+                  Ma-Du-El zen resort เป็นที่พักเกาะล้านเปิดใหม่สไตล์ญี่ปุ่น
+                  ที่มีคอนเซ็ปต์เก๋ๆ ไม่ซ้ำแบบใคร
+                  ด้วยการจำลองเอาบรรยากาศที่พักสไตล์เรียวกังแบบญี่ปุ่นแท้ๆ
+                  มาไว้บนเกาะล้าน ทั้งห้องพัก การตกแต่งและบรรยากาศ
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="wifi-outline"></ion-icon> ฟรี Wi-Fi <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="fast-food-outline"></ion-icon> ฟรีอาหารเช้า
+                <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  ยกเลิกการจองได้ฟรี <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           <ion-button
             color="danger"
             class="ion-no-margin"
@@ -36,20 +81,136 @@
       </div>
     </ion-card-content>
   </ion-card>
+
   <ion-card>
     <ion-card-content color="tertiary">
       <div class="ion-no-margin">
         <ion-card color="tertiary" class="ion-no-padding border-radius">
-          <img
-            src="https://t-cf.bstatic.com/xdata/images/hotel/max1024x768/256269680.jpg?k=97edf7246251432b705ae080ff39e3f894b7579f5635b2c49e92b3ac79ea6f37&o=&hp=1"
-          />
-          <ion-card-title>The Castello Resort</ion-card-title>
-            <ion-card-subtitle>เดอะ คาสเตลโล รีสอร์ท</ion-card-subtitle>
-          <ion-card-content>
-            The Castello Resort ตั้งอยู่ห่างจากหาดตาแหวน 10 นาที
+          <img src="https://t-cf.bstatic.com/xdata/images/hotel/max1024x768/161159671.jpg?k=303338a6b1b5474e670d5b6cd98ae38bc44ad3576d9743cc516964f1aee5a679&o=&hp=1" />
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6">
+                <ion-label>
+                  <h2><b>Rimtalay Resort Koh Larn</b></h2>
+                  <h2>ริมทะเล รีสอร์ท</h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="6">
+                <ion-label>
+                  <h3 class="ion-text-right">
+                    <ion-text color="danger">
+                      <h2>
+                        <b>2,436</b><small>&nbsp;THB</small><span>/คืน/ห้อง</span>
+                      </h2>
+                    </ion-text>
+                    <ion-text color="medium">
+                      ราคารวมภาษีแล้ว
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-icon name="pin-outline"></ion-icon>
+                  Rimtalay Resort Koh Larn ตั้งอยู่บริเวณหาดตายายของเกาะล้าน
+            ห่างจากท่าเรือหน้าบ้านไม่เกิน 900 ม. และห่างจากหาดตายาย 600 ม.
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="wifi-outline"></ion-icon> ฟรี Wi-Fi <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="fast-food-outline"></ion-icon> ฟรีอาหารเช้า
+                <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  ยกเลิกการจองได้ฟรี <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <ion-button
+            color="danger"
+            class="ion-no-margin"
+            expand="full"
+            routerLink="/select-hotel"
+            >เลือก</ion-button
+          >
+        </ion-card>
+      </div>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-content color="tertiary">
+      <div class="ion-no-margin">
+        <ion-card color="tertiary" class="ion-no-padding border-radius">
+          <img src="https://t-cf.bstatic.com/xdata/images/hotel/max1024x768/256269680.jpg?k=97edf7246251432b705ae080ff39e3f894b7579f5635b2c49e92b3ac79ea6f37&o=&hp=1" />
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6">
+                <ion-label>
+                  <h2><b>The Castello Resor</b></h2>
+                  <h2>เดอะ คาสเตลโล รีสอร์ท</h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="6">
+                <ion-label>
+                  <h3 class="ion-text-right">
+                    <ion-text color="danger">
+                      <h2>
+                        <b>3,456</b><small>&nbsp;THB</small><span>/คืน/ห้อง</span>
+                      </h2>
+                    </ion-text>
+                    <ion-text color="medium">
+                      ราคารวมภาษีแล้ว
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-icon name="pin-outline"></ion-icon>
+                  The Castello Resort ตั้งอยู่ห่างจากหาดตาแหวน 10 นาที
             หากเดินทางโดยรถยนต์ ห่างจากท่าเรือหน้าบ้าน 400 เมตร
             และห่างจากสนามบินสุวรรณภูมิ 85 กิโลเมตร
-          </ion-card-content>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="wifi-outline"></ion-icon> ฟรี Wi-Fi <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="fast-food-outline"></ion-icon> ฟรีอาหารเช้า
+                <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  ยกเลิกการจองได้ฟรี <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           <ion-button
             color="danger"
             class="ion-no-margin"
@@ -61,16 +222,65 @@
       </div>
     </ion-card-content>
   </ion-card>
+
   <ion-card>
     <ion-card-content color="tertiary">
       <div class="ion-no-margin">
         <ion-card color="tertiary" class="ion-no-padding border-radius">
-        <img src="https://t-cf.bstatic.com/xdata/images/hotel/max1024x768/274006931.jpg?k=303773db63893319db96b8b840968d6f54620d9027a5fbcb9547174bdd568b7d&o=&hp=1" />
-        <ion-card-title>Homebeach Resort</ion-card-title>
-            <ion-card-subtitle>โฮมบีช รีสอร์ท</ion-card-subtitle>
-          <ion-card-content>
-            Homebeach Resort เกาะล้านตั้งอยู่ในเกาะล้าน ห่างจากหาดทองหลาง 750 ม.
-          </ion-card-content>
+          <img src="https://t-cf.bstatic.com/xdata/images/hotel/max1024x768/274006931.jpg?k=303773db63893319db96b8b840968d6f54620d9027a5fbcb9547174bdd568b7d&o=&hp=1" />
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6">
+                <ion-label>
+                  <h2><b>Homebeach Resort</b></h2>
+                  <h2>โฮมบีช รีสอร์ท</h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="6">
+                <ion-label>
+                  <h3 class="ion-text-right">
+                    <ion-text color="danger">
+                      <h2>
+                        <b>4,345</b><small>&nbsp;THB</small><span>/คืน/ห้อง</span>
+                      </h2>
+                    </ion-text>
+                    <ion-text color="medium">
+                      ราคารวมภาษีแล้ว
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-icon name="pin-outline"></ion-icon>
+                  Homebeach Resort เกาะล้านตั้งอยู่ในเกาะล้าน ห่างจากหาดทองหลาง 750
+              ม.
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="wifi-outline"></ion-icon> ฟรี Wi-Fi <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="fast-food-outline"></ion-icon> ฟรีอาหารเช้า
+                <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  ยกเลิกการจองได้ฟรี <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           <ion-button
             color="danger"
             class="ion-no-margin"
@@ -82,37 +292,68 @@
       </div>
     </ion-card-content>
   </ion-card>
+
   <ion-card>
     <ion-card-content color="tertiary">
       <div class="ion-no-margin">
         <ion-card color="tertiary" class="ion-no-padding border-radius">
-        <img src="https://pix8.agoda.net/hotelImages/1951525/-1/a9750a6c2d5cf0c30b254a788005961a.jpg?ca=8&ce=1&s=1024x768" />
-        <ion-card-title>Tawaen Beach Resort</ion-card-title>
-            <ion-card-subtitle>ตาแหวน บีช รีสอร์ต</ion-card-subtitle>
-          <ion-card-content>
-            หาดทองหลางห่างจาก Tawaen Beach Resort 450 ม. ในขณะที่หาดเทียนอยู่ห่างจากที่พัก 1.2 กม. สนามบินที่ใกล้ที่สุดคือสนามบินนานาชาติอู่ตะเภา ระยอง-พัทยา ซึ่งอยู่ห่างจากรีสอร์ท 47 กม.
-          </ion-card-content>
-          <ion-button
-            color="danger"
-            class="ion-no-margin"
-            expand="full"
-            routerLink="/select-hotel"
-            >เลือก</ion-button
-          >
-        </ion-card>
-      </div>
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <ion-card-content color="tertiary">
-      <div class="ion-no-margin">
-        <ion-card color="tertiary" class="ion-no-padding border-radius">
-        <img src="https://pix8.agoda.net/hotelImages/28133688/0/d2cc901ed61461e33e24892e79e3a981.jpg?ca=22&ce=0&s=1024x768" />
-        <ion-card-title>Ma-Du-EI zen Resort</ion-card-title>
-            <ion-card-subtitle>มาดูอิเซนส์ รีสอร์ต</ion-card-subtitle>
-          <ion-card-content>
-Ma-Du-El zen resort เป็นที่พักเกาะล้านเปิดใหม่สไตล์ญี่ปุ่น ที่มีคอนเซ็ปต์เก๋ๆ ไม่ซ้ำแบบใคร ด้วยการจำลองเอาบรรยากาศที่พักสไตล์เรียวกังแบบญี่ปุ่นแท้ๆ มาไว้บนเกาะล้าน ทั้งห้องพัก การตกแต่งและบรรยากาศ 
-          </ion-card-content>
+          <img src="https://pix8.agoda.net/hotelImages/1951525/-1/a9750a6c2d5cf0c30b254a788005961a.jpg?ca=8&ce=1&s=1024x768" />
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6">
+                <ion-label>
+                  <h2><b>Tawaen Beach Resort</b></h2>
+                  <h2>ตาแหวน บีช รีสอร์ต</h2>
+                </ion-label>
+              </ion-col>
+              <ion-col size="6">
+                <ion-label>
+                  <h3 class="ion-text-right">
+                    <ion-text color="danger">
+                      <h2>
+                        <b>2,000</b><small>&nbsp;THB</small><span>/คืน/ห้อง</span>
+                      </h2>
+                    </ion-text>
+                    <ion-text color="medium">
+                      ราคารวมภาษีแล้ว
+                    </ion-text>
+                  </h3>
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-icon name="pin-outline"></ion-icon>
+                  หาดทองหลางห่างจาก Tawaen Beach Resort 450 ม.
+            ในขณะที่หาดเทียนอยู่ห่างจากที่พัก 1.2 กม.
+            สนามบินที่ใกล้ที่สุดคือสนามบินนานาชาติอู่ตะเภา ระยอง-พัทยา
+            ซึ่งอยู่ห่างจากรีสอร์ท 47 กม.
+                
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="wifi-outline"></ion-icon> ฟรี Wi-Fi <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  <ion-icon name="fast-food-outline"></ion-icon> ฟรีอาหารเช้า
+                <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col>
+                <ion-label>
+                  ยกเลิกการจองได้ฟรี <br />
+                </ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           <ion-button
             color="danger"
             class="ion-no-margin"
