--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,4 @@
-<ion-tabs>
-
+<ion-tabs mode="ios">
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="main-menu">
       <ion-icon name="home"></ion-icon>
@@ -12,8 +11,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="my-booking">
-      <ion-icon name="bag-handle"></ion-icon>
-      <ion-label>รายการของฉัน</ion-label>
+      <ion-icon name="book"></ion-icon>
+      <ion-label>การจองของฉัน</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="my-account">
@@ -21,5 +20,4 @@
       <ion-label>บัญชี</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
