--- a/src/app/tour-form/tour-form.page.html
+++ b/src/app/tour-form/tour-form.page.html
@@ -38,7 +38,9 @@
               <ion-input type="text"></ion-input>
             </ion-item>
             <ion-card-header color="tertiary">
-              <ion-card-title style="font-size: 18px; margin-bottom: -1rem;"> จำนวนผคนทัวร์ </ion-card-title>
+              <ion-card-title style="font-size: 18px; margin-bottom: -1rem">
+                จำนวนผู้เข้าร่วมทัวร์
+              </ion-card-title>
             </ion-card-header>
             <ion-item color="tertiary" lines="full">
               <ion-label style="font-size: 15px">ผู้ใหญ่</ion-label>
@@ -83,14 +85,16 @@
               ></ion-icon>
             </ion-item>
             <!-- <ion-item color="light" lines="none">
-                <ion-label position="fixed">เด็ก</ion-label>
-                <ion-select class="ion-no-padding ion-padding-end ion-select-full" okText="ตกลง" cancelText="ยกเลิก" interface="alert" placeholder="กรุณาระบุ">
-                    <ion-select-option value="male">มี</ion-select-option>
-                    <ion-select-option value="female">ไม่มี</ion-select-option>
-                </ion-select>
-            </ion-item> -->
+              <ion-label position="fixed">เด็ก</ion-label>
+              <ion-select class="ion-no-padding ion-padding-end ion-select-full" okText="ตกลง" cancelText="ยกเลิก" interface="alert" placeholder="กรุณาระบุ">
+                  <ion-select-option value="male">มี</ion-select-option>
+                  <ion-select-option value="female">ไม่มี</ion-select-option>
+              </ion-select>
+          </ion-item> -->
             <ion-card-header color="tertiary">
-              <ion-card-title style="font-size: 18px; margin-bottom: -1rem;"> เตียงเสริม </ion-card-title>
+              <ion-card-title style="font-size: 18px; margin-bottom: -1rem">
+                เตียงเสริม
+              </ion-card-title>
             </ion-card-header>
             <ion-item color="tertiary" lines="full">
               <ion-label style="font-size: 15px"
@@ -180,12 +184,12 @@
                     >เงื่อนไขข้อตกลง</ion-text
                   >
                   แล้ว
-                </b></ion-label>
-              <ion-checkbox color="primary" checked slot="start"></ion-checkbox>
+                </b></ion-label
+              >
+              <ion-checkbox mode="md" color="primary" checked slot="start"></ion-checkbox>
             </ion-item>
           </ion-card>
 
-          <br />
           <ion-button
             color="danger"
             class="ion-no-margin"
