--- a/src/app/cart-dialog/cart-dialog.page.html
+++ b/src/app/cart-dialog/cart-dialog.page.html
@@ -3,17 +3,15 @@
     <ion-buttons slot="start">
       <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
     </ion-buttons>
-  <ion-title>Payment Success</ion-title>
-</ion-toolbar>
+    <ion-title>Payment Success</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content class="transaction" mode="ios">
-
-  <ion-card >
-    <ion-card-content color="tertiary" >
+  <ion-card>
+    <ion-card-content color="tertiary">
       <div class="ion-no-margin">
         <ion-card color="tertiary" class="ion-no-padding border-radius">
-
           <ion-card class="ion-padding-top" color="tertiary">
             <ion-item class="ion-text-center" color="tertiary" lines="none">
               <ion-grid class="ion-padding">
@@ -21,14 +19,23 @@
                   <ion-col size="6" class="ion-text-center">
                     <div class="content-center">
                       <div class="content-center">
-                        <img class="icon circle transaction-img" src="assets/imgs/defaultshop.png">
+                        <img
+                          class="icon circle transaction-img"
+                          src="assets/imgs/defaultshop.png"
+                        />
                       </div>
                     </div>
-                    <ion-icon class="right-arrow" name="chevron-forward-sharp"></ion-icon>
+                    <ion-icon
+                      class="right-arrow"
+                      name="chevron-forward-sharp"
+                    ></ion-icon>
                   </ion-col>
                   <ion-col size="6" class="ion-text-center">
                     <div class="content-center">
-                      <img class="icon circle transaction-img" src="assets/imgs/defaultshop.png">
+                      <img
+                        class="icon circle transaction-img"
+                        src="assets/imgs/defaultshop.png"
+                      />
                     </div>
                   </ion-col>
                 </ion-row>
@@ -60,13 +67,17 @@
             </ion-item>
             <ion-item class="ion-text-center" color="tertiary" lines="full">
               <ion-label color="danger">
-                <h2><b>10,000
-                    <small>THB</small></b>
+                <h2>
+                  <b>10,000 <small>THB</small></b>
                 </h2>
               </ion-label>
             </ion-item>
-        
-            <ion-item color="tertiary" class="ion-padding-vertical" lines="none">
+
+            <ion-item
+              color="tertiary"
+              class="ion-padding-vertical"
+              lines="none"
+            >
               <ion-avatar slot="start" class="avatar-m">
                 <img class="non-circle" src="assets/imgs/qrcode.png" />
               </ion-avatar>
@@ -87,18 +98,24 @@
               </ion-note>
             </ion-item>
           </ion-card>
-          <div size="12" class="indentation">
-          </div>
-          <br>
+          <div size="12" class="indentation"></div>
+          <br />
           <ion-label color="medium" class="ion-text-center">
             <h3>
               <a class="link-medium">
-                <ion-icon name="receipt-outline"></ion-icon>&nbsp;ดูรายละเอียดบิล
+                <ion-icon name="receipt-outline"></ion-icon
+                >&nbsp;ดูรายละเอียดบิล
               </a>
             </h3>
           </ion-label>
-          <br>
-          <ion-button color="danger" class="ion-no-margin" expand="full" routerLink="/tabs/main-menu">กลับไปหน้าหลัก</ion-button>
+          <br />
+          <ion-button
+            color="danger"
+            class="ion-no-margin"
+            expand="full"
+            routerLink="/tabs/main-menu"
+            >กลับไปหน้าหลัก</ion-button
+          >
         </ion-card>
       </div>
     </ion-card-content>
