--- a/src/app/cart-edit/cart-edit.page.html
+++ b/src/app/cart-edit/cart-edit.page.html
@@ -13,10 +13,19 @@
       <div>
         <ion-card color="tertiary" class="ion-no-padding border-radius">
           <ion-list>
-            <ion-item color="tertiary" class="ion-vertical">
+            <ion-item lines="full" color="tertiary" class="ion-vertical">
               <ion-label>
                 <h2><b>รายละเอียดการชำระเงิน</b></h2>
               </ion-label>
+            </ion-item>
+            <ion-item lines="full" color="tertiary">
+              <ion-label>
+                <h3><b>ใส่โค้ดส่วนลด:&nbsp; </b></h3>
+              </ion-label>
+              <ion-input></ion-input>
+              <ion-chip color="danger">
+                <ion-label color="danger">ใช้</ion-label>
+              </ion-chip>
             </ion-item>
           </ion-list>
 
@@ -77,7 +86,8 @@
                   <ion-text color="danger">
                     <ion-label>
                       <h3>
-                        <b>10,000
+                        <b
+                          >10,000
                           <small>THB</small>
                         </b>
                       </h3>
@@ -93,9 +103,15 @@
                 <ion-label class="ion-padding-start">
                   <h3><b>รายการที่เช่า (1 รายการ)</b></h3>
                 </ion-label>
-                <ion-row class="ion-no-padding ion-align-items-left ion-padding-top">
-                  <ion-col justify-content-center align-items-left size="auto"
-                    class="ion-text-center ion-padding-start">
+                <ion-row
+                  class="ion-no-padding ion-align-items-left ion-padding-top"
+                >
+                  <ion-col
+                    justify-content-center
+                    align-items-left
+                    size="auto"
+                    class="ion-text-center ion-padding-start"
+                  >
                     <img class="logo-l" src="assets/imgs/defaultshop.png" />
                   </ion-col>
 
@@ -150,55 +166,54 @@
           </ion-list>
           <ion-list>
             <ion-card-header mode="md" color="tertiary">
-            <ion-card-title style="font-size: 18px;">ข้อมูลผู้ทำรายการ</ion-card-title>
-              </ion-card-header>
-              <ion-item lines="full" mode="ios" color="tertiary">
-                <ion-label>ใช้ข้อมูล KYC</ion-label>
-                <ion-toggle
-                  color="danger"
-                ></ion-toggle>
-              </ion-item>
-              <ion-item lines="full" color="tertiary">
-                <ion-select
-                  mode="ios"
-                  class="ion-no-padding ion-padding-end ion-select-full"
-                  okText="ตกลง"
-                  cancelText="ยกเลิก"
-                  interface="action-sheet"
-                  placeholder="คำนำหน้า"
+              <ion-card-title style="font-size: 18px"
+                >ข้อมูลผู้ทำรายการ</ion-card-title
+              >
+            </ion-card-header>
+            <ion-item lines="full" mode="ios" color="tertiary">
+              <ion-label>ใช้ข้อมูล KYC</ion-label>
+              <ion-toggle color="danger"></ion-toggle>
+            </ion-item>
+            <ion-item lines="full" color="tertiary">
+              <ion-select
+                mode="ios"
+                class="ion-no-padding ion-padding-end ion-select-full"
+                okText="ตกลง"
+                cancelText="ยกเลิก"
+                interface="action-sheet"
+                placeholder="คำนำหน้า"
+              >
+                <ion-select-option value="male">นาย (Mr.)</ion-select-option>
+                <ion-select-option value="female1"
+                  >นางสาว (Ms.)</ion-select-option
                 >
-                  <ion-select-option value="male"
-                    >นาย (Mr.)</ion-select-option
-                  >
-                  <ion-select-option value="female1"
-                    >นางสาว (Ms.)</ion-select-option
-                  >
-                  <ion-select-option value="female2"
-                    >นาง (Mrs.)</ion-select-option
-                  >
-                </ion-select>
-              </ion-item>
-              <ion-item lines="full" color="tertiary">
-                <ion-input
-                  placeholder="ชื่อ surname "
-                  type="text"
-                ></ion-input>
-                <ion-input placeholder="นามสกุล lastname " type="text"></ion-input>
-              </ion-item> 
-              <ion-item lines="full " color="tertiary ">
-                <ion-input
-                  placeholder="เบอร์ติดต่อ tel "
-                  type="tel "
-                ></ion-input>
-              </ion-item>
-               <ion-item lines="full " color="tertiary ">
-                <ion-input
-                  placeholder="สัญชาติ nationality "
-                  type="text"
-                ></ion-input>
-              </ion-item>
-              <ion-accordion-group color="tertiary" mode="ios">
-              <ion-accordion value="start" color="tertiary">
+                <ion-select-option value="female2"
+                  >นาง (Mrs.)</ion-select-option
+                >
+              </ion-select>
+            </ion-item>
+            <ion-item lines="full" color="tertiary">
+              <ion-input placeholder="ชื่อ surname " type="text"></ion-input>
+              <ion-input
+                placeholder="นามสกุล lastname "
+                type="text"
+              ></ion-input>
+            </ion-item>
+            <ion-item lines="full " color="tertiary ">
+              <ion-input placeholder="เบอร์ติดต่อ tel " type="tel "></ion-input>
+            </ion-item>
+            <ion-item lines="full " color="tertiary ">
+              <ion-input
+                placeholder="สัญชาติ nationality "
+                type="text"
+              ></ion-input>
+            </ion-item>
+            <ion-accordion-group color="tertiary" mode="ios">
+              <ion-accordion
+                value="start"
+                color="tertiary"
+                toggleIconSlot="start"
+              >
                 <ion-item slot="header" color="tertiary">
                   <ion-label>วันเดือนปีเกิด birthdate</ion-label>
                   <ion-note slot="end">{{date0}}</ion-note>
@@ -213,20 +228,23 @@
                 ></ion-datetime>
               </ion-accordion>
             </ion-accordion-group>
+          </ion-list>
+          <ion-item color="tertiary">
+            <ion-label style="font-size: 15px">
+              ฉันได้อ่านและยอมรับ
+              <ion-text color="primary" routerLink="/agreement-template"
+                >เงื่อนไขข้อตกลง</ion-text
+              >
+            </ion-label>
+            <ion-checkbox mode="md" color="primary" slot="start"></ion-checkbox>
+          </ion-item>
 
-            </ion-list>
-            <ion-item color="tertiary">
-              <ion-label style="font-size: 15px"
-                >
-                  ฉันได้อ่านและยอมรับ
-                  <ion-text color="primary" routerLink="/agreement-template"
-                    >เงื่อนไขข้อตกลง</ion-text>
-                  แล้ว
-                </ion-label>
-              <ion-checkbox mode="md" color="primary"  slot="start"></ion-checkbox>
-            </ion-item>
-
-          <ion-button color="danger" class="ion-no-margin" expand="full" routerLink="/cart-checkout">ดำเนินการต่อ
+          <ion-button
+            color="danger"
+            class="ion-no-margin"
+            expand="full"
+            routerLink="/cart-checkout"
+            >ดำเนินการต่อ
           </ion-button>
         </ion-card>
       </div>
