--- a/src/app/detail-tour/detail-tour.page.html
+++ b/src/app/detail-tour/detail-tour.page.html
@@ -18,10 +18,6 @@
             *ngFor="let tmp of pagkage"
           >
             <ion-card color="tertiary">
-
-            <ion-card-header mode="md"><ion-card-title>{{tmp.englishname}}</ion-card-title><ion-card-subtitle>250 บาท</ion-card-subtitle></ion-card-header>
-            
-              
               <ion-slides>
                 <ion-slide>
                   <div class="slide">
@@ -49,29 +45,63 @@
                   />
                 </ion-slide>
               </ion-slides>
-              <ion-card-header mode="md">
-                <ion-card-subtitle>{{tmp.thainame}}</ion-card-subtitle>
-                <ion-card-title>รายละเอียดงานบริการ</ion-card-title>
-              </ion-card-header>
-              <ion-card-content> {{tmp.detail}} </ion-card-content>
-              <ion-card-header>
-                <h2>หมายเหตุ การใช้งานแพ็คเกจ</h2>
-              </ion-card-header>
+
+              <ion-grid>
+                <ion-row>
+                  <ion-col size="6">
+                    <ion-label>
+                      <h2><b>{{tmp.englishname}}</b></h2>
+                      <h3>{{tmp.thainame}}</h3>
+                    </ion-label>
+                  </ion-col>
+                  <ion-col size="6">
+                    <ion-label>
+                      <h3 class="ion-text-right">
+                        <ion-text color="danger">
+                          <h2>
+                            {{tmp.price}}<small>&nbsp;THB</small
+                            ><span>/คน</span>
+                          </h2>
+                        </ion-text>
+                        <ion-text color="medium"> ราคารวมภาษีแล้ว </ion-text>
+                      </h3>
+                    </ion-label>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+
+              <ion-card-content style="text-align: left">
+                <h2><b>รายละเอียดงานบริการ</b></h2>
+                <ion-icon name="bus-outline"></ion-icon
+                >&nbsp;{{tmp.icon1}}<br />
+                <ion-icon name="bed-outline"></ion-icon
+                >&nbsp;{{tmp.icon2}}<br />
+                <ion-icon name="fast-food-outline"></ion-icon
+                >&nbsp;{{tmp.icon3}}<br />
+              </ion-card-content>
               <ion-card-content>
-                - ท่านสามารถเลือกวันเข้าพักได้ทุกวัน<br />- โปรโมชั่น 3 วัน 2
-                คืน สำหรับจอง 2 ท่าน ขึ้นไป<br />- เลือกจองเข้าพักได้ วันที่ 1
-                พ.ค. ถึง 31 ต.ค. 65 ชำระท่านละ 2,590 บ.<br />- สำหรับ เด็กอายุ 4
-                - 11 ปี เสริมเตียง ชำระท่านละ 2,590 บ.<br />- สำหรับ เด็กอายุ 4
-                - 11 ปี พักกับผู้ปกครอง ชำระท่านละ 490 บ.<br />- สำหรับ เด็กอายุ
-                0 - 3 ปี ไม่เสียค่าใช้จ่าย<br />- โปรโมชั่น แพ็คเกจนี้
-                สงวนสิทธิ์สำหรับผู้ซื้อและระบุวันเดินทางภายใน 30 มิ.ย. 65
-                เท่านั้น<br />- กรณี ไม่สามารถระบุวันเดินทางภายในวันที่กำหนด
-                สามารถปรับเปลี่ยนเป็นแพ็คเกจอื่นได้ฟรี <br />-
-                หากต้องการแพ็คเกจเดิม
-                ราคาแพ็คเกจอาจมีการเปลี่ยนแปลงตามแพ็คเกจโปรโมชั่น ณ ขณะนั้น<br />-
-                VOUCHER ไม่สามารถเปลี่ยนแปลงเป็นเงินสดได้<br />-
-                ติดต่อเพื่อเช็คห้องว่างล่วงหน้า 14 - 21 วัน<br />- อายุการใช้งาน
-                โปรโมชั่น แพ็คเกจ : 31 ต.ค. 2565<br />
+                <ion-icon color="danger" name="alert-circle-outline"></ion-icon>
+                <ion-text style="color: red"> หมายเหตุ การใช้งานแพ็คเกจ </ion-text>
+                <ion-card-subtitle>
+                  - ท่านสามารถเลือกวันเข้าพักได้ทุกวัน<br />
+                  - โปรโมชั่น 3 วัน 2 คืน สำหรับจอง 2 ท่าน ขึ้นไป<br />
+                  - เลือกจองเข้าพักได้ วันที่ 1 พ.ค. ถึง 31 ต.ค. 65 ชำระท่านละ
+                  2,590 บ.<br />
+                  - สำหรับ เด็กอายุ 4 - 11 ปี เสริมเตียง ชำระท่านละ 2,590 บ.<br />
+                  - สำหรับ เด็กอายุ 4 - 11 ปี พักกับผู้ปกครอง ชำระท่านละ 490
+                  บ.<br />
+                  - สำหรับ เด็กอายุ 0 - 3 ปี ไม่เสียค่าใช้จ่าย<br />
+                  - โปรโมชั่น แพ็คเกจนี้
+                  สงวนสิทธิ์สำหรับผู้ซื้อและระบุวันเดินทางภายใน 30 มิ.ย. 65
+                  เท่านั้น<br />
+                  - กรณี ไม่สามารถระบุวันเดินทางภายในวันที่กำหนด
+                  สามารถปรับเปลี่ยนเป็นแพ็คเกจอื่นได้ฟรี <br />
+                  - หากต้องการแพ็คเกจเดิม
+                  ราคาแพ็คเกจอาจมีการเปลี่ยนแปลงตามแพ็คเกจโปรโมชั่น ณ ขณะนั้น<br />
+                  - VOUCHER ไม่สามารถเปลี่ยนแปลงเป็นเงินสดได้<br />
+                  - ติดต่อเพื่อเช็คห้องว่างล่วงหน้า 14 - 21 วัน<br />
+                  - อายุการใช้งาน โปรโมชั่น แพ็คเกจ : 31 ต.ค. 2565<br />
+                </ion-card-subtitle>
               </ion-card-content>
             </ion-card>
           </ion-list>
@@ -81,7 +111,7 @@
             color="danger"
             class="ion-no-margin"
             expand="full"
-            routerLink="/tour-form"
+            routerLink="/cart-edit"
             >เลือก</ion-button
           >
         </ion-card>
