--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,9 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
     </ion-buttons>
-    <ion-title class="text-light ion-padding-center"
-      >Car Rental
-    </ion-title>
+    <ion-title class="text-light ion-padding-center">Car Rental </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -28,7 +26,7 @@
             [(ngModel)]="driver"
           >
             <ion-row>
-              <ion-col>
+              <ion-col class="ion-no-padding">
                 <ion-item lines="full" color="tertiary">
                   <ion-label>
                     <h3><b>ขับเอง</b></h3>
@@ -36,7 +34,7 @@
                   <ion-radio slot="start" value="no"></ion-radio>
                 </ion-item>
               </ion-col>
-              <ion-col>
+              <ion-col class="ion-no-padding">
                 <ion-item lines="full" color="tertiary">
                   <ion-label>
                     <h3><b>พร้อมคนขับ</b></h3>
@@ -50,7 +48,7 @@
           <div *ngIf="driver === 'yes'">
             <ion-radio-group mode="md" color="tertiary">
               <ion-row>
-                <ion-col>
+                <ion-col class="ion-no-padding">
                   <ion-item lines="full" color="tertiary">
                     <ion-label>
                       <h3><b>ชาย</b></h3>
@@ -58,7 +56,7 @@
                     <ion-radio slot="start" value="true"></ion-radio>
                   </ion-item>
                 </ion-col>
-                <ion-col>
+                <ion-col class="ion-no-padding">
                   <ion-item lines="full" color="tertiary">
                     <ion-label>
                       <h3><b>หญิง</b></h3>
@@ -70,59 +68,60 @@
             </ion-radio-group>
           </div>
           <!-- ค้นหารถ -->
-          <ion-item lines="full" color="tertiary">
-            <ion-searchbar
-              placeholder="ตำแหน่งรับรถ"
-              mode="ios"
-            ></ion-searchbar>
-          </ion-item>
+
+          <ion-searchbar
+            placeholder="ตำแหน่งรับรถ"
+            search-icon="location"
+            mode="ios"
+          ></ion-searchbar>
+
           <!-- ******************************** -->
 
           <!-- ประเภทรถ -->
-            <ion-row size="3" >
-              <ion-col class="ion-no-padding ion-no-margin">
-                <ion-item lines="full" color="tertiary">
-                  <ion-label class="ion-margin-start">
-                    <h3><b>รถเก๋ง</b></h3>
-                  </ion-label>
-                  <ion-checkbox
-                    slot="start"
-                    color="primary"
-                    mode="md"
-                    class="ion-no-margin"
-                  >
-                  </ion-checkbox>
-                </ion-item>
-              </ion-col>
-              <ion-col class="ion-no-padding ion-no-margin">
-                <ion-item lines="full" color="tertiary">
-                  <ion-label class="ion-margin-start">
-                    <h3><b>รถกระบะ</b></h3>
-                  </ion-label>
-                  <ion-checkbox
-                    slot="start"
-                    color="primary"
-                    mode="md"
-                    class="ion-no-margin"
-                  >
-                  </ion-checkbox>
-                </ion-item>
-              </ion-col>
-              <ion-col class="ion-no-padding ion-no-margin">
-                <ion-item lines="full" color="tertiary">
-                  <ion-label class="ion-margin-start">
-                    <h3><b>รถSUV</b></h3>
-                  </ion-label>
-                  <ion-checkbox
-                    slot="start"
-                    color="primary"
-                    mode="md"
-                    class="ion-no-margin"
-                  >
-                  </ion-checkbox>
-                </ion-item>
-              </ion-col>
-            </ion-row>
+          <ion-row size="3">
+            <ion-col class="ion-no-padding ion-no-margin">
+              <ion-item lines="full" color="tertiary">
+                <ion-label class="ion-margin-start">
+                  <h3><b>รถเก๋ง</b></h3>
+                </ion-label>
+                <ion-checkbox
+                  slot="start"
+                  color="primary"
+                  mode="md"
+                  class="ion-no-margin"
+                >
+                </ion-checkbox>
+              </ion-item>
+            </ion-col>
+            <ion-col class="ion-no-padding ion-no-margin">
+              <ion-item lines="full" color="tertiary">
+                <ion-label class="ion-margin-start">
+                  <h3><b>รถกระบะ</b></h3>
+                </ion-label>
+                <ion-checkbox
+                  slot="start"
+                  color="primary"
+                  mode="md"
+                  class="ion-no-margin"
+                >
+                </ion-checkbox>
+              </ion-item>
+            </ion-col>
+            <ion-col class="ion-no-padding ion-no-margin">
+              <ion-item lines="full" color="tertiary">
+                <ion-label class="ion-margin-start">
+                  <h3><b>รถSUV</b></h3>
+                </ion-label>
+                <ion-checkbox
+                  slot="start"
+                  color="primary"
+                  mode="md"
+                  class="ion-no-margin"
+                >
+                </ion-checkbox>
+              </ion-item>
+            </ion-col>
+          </ion-row>
           <!-- ******************************** -->
 
           <!-- ยี่ห้อรถ -->
@@ -130,7 +129,12 @@
             <ion-label>
               <h4><b>ยี่ห้อรถ</b> (ถ้ามี)</h4>
             </ion-label>
-            <ion-select mode="ios" multiple="true" cancelText="กลับ" okText="ตกลง">
+            <ion-select
+              mode="ios"
+              multiple="true"
+              cancelText="กลับ"
+              okText="ตกลง"
+            >
               <ion-select-option value="bacon">Toyota</ion-select-option>
               <ion-select-option value="olives">Honda</ion-select-option>
               <ion-select-option value="xcheese">Ford</ion-select-option>
@@ -148,53 +152,59 @@
           <!-- ******************************** -->
 
           <!-- วันที่เช่า -->
-                      <ion-accordion-group color="tertiary" mode="ios">
-              <ion-accordion value="start" color="tertiary">
-                <ion-item slot="header" color="tertiary">
-                  <ion-label>วันที่เช่า</ion-label>
-                  <ion-note slot="end">{{date1}}</ion-note>
-                </ion-item>
-                <ion-datetime
-                  id="datetime"
-                  #d1
-                  slot="content"
-                  locale="th-TH"
-                  (ionChange)="formatDate1(d1.value)"
-                  display-format="YYYY-MM-DD"
-                ></ion-datetime>
-              </ion-accordion>
-            </ion-accordion-group>
+          <ion-accordion-group color="tertiary" mode="ios">
+            <ion-accordion value="start" color="tertiary">
+              <ion-item slot="header" color="tertiary">
+                <ion-label>วันที่เช่า</ion-label>
+                <ion-note slot="end">{{date1}}</ion-note>
+              </ion-item>
+              <ion-datetime
+                id="datetime"
+                #d1
+                slot="content"
+                locale="th-TH"
+                (ionChange)="formatDate1(d1.value)"
+                display-format="YYYY-MM-DD"
+              ></ion-datetime>
+            </ion-accordion>
+          </ion-accordion-group>
 
-            <ion-accordion-group color="tertiary" mode="ios">
-              <ion-accordion value="start" color="tertiary">
-                <ion-item slot="header" color="tertiary">
-                  <ion-label>วันที่ตืน</ion-label>
-                  <ion-note slot="end">{{date2}}</ion-note>
-                </ion-item>
-                <ion-datetime
-                  id="datetime"
-                  #d2
-                  slot="content"
-                  locale="th-TH"
-                  (ionChange)="formatDate2(d2.value)"
-                  display-format="YYYY-MM-DD"
-                ></ion-datetime>
-              </ion-accordion>
-            </ion-accordion-group>
+          <ion-accordion-group color="tertiary" mode="ios">
+            <ion-accordion
+              value="start"
+              color="tertiary"
+              toggleIconSlot="start"
+            >
+              <ion-item slot="header" color="tertiary">
+                <ion-label>วันที่คืน</ion-label>
+                <ion-note slot="end">{{date2}}</ion-note>
+              </ion-item>
+              <ion-datetime
+                id="datetime"
+                #d2
+                slot="content"
+                locale="th-TH"
+                (ionChange)="formatDate2(d2.value)"
+                display-format="YYYY-MM-DD"
+              ></ion-datetime>
+            </ion-accordion>
+          </ion-accordion-group>
           <!-- ******************************** -->
           <ion-card-header mode="md">
-          <ion-card-title style="font-size: 16px;">ช่วงอายุของคนขับ</ion-card-title>
+            <ion-card-title style="font-size: 16px"
+              >ช่วงอายุของคนขับ</ion-card-title
+            >
           </ion-card-header>
 
-          <ion-item lines="none"color="tertiary">
-            <ion-segment color="danger" mode="ios">
-              <ion-segment-button value="standard">
+          <ion-item lines="none" color="tertiary">
+            <ion-segment color="danger" value="18-29" mode="ios">
+              <ion-segment-button value="18-29">
                 <ion-label>18-29</ion-label>
               </ion-segment-button>
-              <ion-segment-button value="hybrid">
+              <ion-segment-button value="30-70">
                 <ion-label>30-70</ion-label>
               </ion-segment-button>
-              <ion-segment-button value="sat">
+              <ion-segment-button value="71+">
                 <ion-label>71+</ion-label>
               </ion-segment-button>
             </ion-segment>
