--- a/src/app/main-menu/main-menu.page.scss
+++ b/src/app/main-menu/main-menu.page.scss
@@ -81,7 +81,7 @@ ion-input {
 }
 
 .myBTNs4 {
-    background: #DE3A28;
+    background: #ec1c24;
     color: white;
     margin: 1%;
     border-radius: 6px;
@@ -113,7 +113,7 @@ ion-input {
 }
 
 .myBTNs1 {
-  background: #DE3A28;
+  background: #ec1c24;
   color: white;
   position: relative;
   left: 35px;
