--- a/src/app/tour/tour.page.html
+++ b/src/app/tour/tour.page.html
@@ -8,9 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar mode="ios"></ion-searchbar>
+  <ion-searchbar mode="ios" placeholder="ค้นหาทัวร์"></ion-searchbar>
 
-  <div>
+  <div style="margin-top: -12px;">
     <ion-list
       button
       color="tertiary"
@@ -18,20 +18,51 @@
       class="ion-no-padding"
       *ngFor="let tmp of pagkage"
     >
-      <ion-card >
+      <ion-card>
         <ion-card-content color="tertiary">
           <ion-card
-            routerLink="/detail-tour"
+            
             color="tertiary"
-            style="text-align: center;"
+            
             class="ion-no-padding border-radius"
           >
             <ion-img [src]="tmp.image"></ion-img>
-            <ion-card-header color="tertiary">
-              <ion-card-title>{{tmp.englishname}}</ion-card-title>
-              <ion-card-subtitle>{{tmp.thainame}}</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content> {{tmp.detail}} </ion-card-content>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="6">
+                  <ion-label>
+                    <h2><b>{{tmp.englishname}}</b></h2>
+                    <h3>{{tmp.thainame}}</h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="6">
+                  <ion-label>
+                    <h3 class="ion-text-right">
+                      <ion-text color="danger">
+                        <h2>
+                          {{tmp.price}}<small>&nbsp;THB</small><span>/คน</span>
+                        </h2>
+                      </ion-text>
+                      <ion-text color="medium">
+                        ราคารวมภาษีแล้ว
+                      </ion-text>
+                    </h3>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+            <ion-card-content style="text-align: left;">
+                <ion-icon name="bus-outline"></ion-icon>&nbsp;{{tmp.icon1}}<br>
+                <ion-icon name="bed-outline"></ion-icon>&nbsp;{{tmp.icon2}}<br>
+                <ion-icon name="fast-food-outline"></ion-icon>&nbsp;{{tmp.icon3}}<br>
+            </ion-card-content>
+            <ion-button
+            color="danger"
+            class="ion-no-margin"
+            expand="full"
+            routerLink="/detail-tour"
+            >เลือก</ion-button
+          >
           </ion-card>
         </ion-card-content>
       </ion-card>
