Co-authored-by: meenploy <meenploy@users.noreply.github.com> Co-authored-by: pukkysasikan <pukkysasikan@users.noreply.github.com> Co-authored-by: Rai_Namz <pratchaya-anan@users.noreply.github.com> Co-authored-by: phxx03 <phxx03@users.noreply.github.com>

--- a/src/app/cart-edit/cart-edit.page.html
+++ b/src/app/cart-edit/cart-edit.page.html
@@ -229,16 +229,16 @@
               </ion-accordion>
             </ion-accordion-group>
           </ion-list>
-          <ion-item color="tertiary">
+          <ion-item lines="full" color="tertiary">
+            <ion-checkbox mode="md" color="primary" slot="start"></ion-checkbox>
             <ion-label style="font-size: 15px">
               ฉันได้อ่านและยอมรับ
               <ion-text color="primary" routerLink="/agreement-template"
                 >เงื่อนไขข้อตกลง</ion-text
               >
             </ion-label>
-            <ion-checkbox mode="md" color="primary" slot="start"></ion-checkbox>
           </ion-item>
-
+          <br>
           <ion-button
             color="danger"
             class="ion-no-margin"
