--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -46,6 +46,9 @@
           </ion-radio-group>
           <!-- ******************************** -->
           <div *ngIf="driver === 'yes'">
+          <ion-card-header>
+          <ion-card-title mode="md"><h2>เลือกเพศคนขับ</h2></ion-card-title>
+          </ion-card-header>
             <ion-radio-group mode="md" color="tertiary">
               <ion-row>
                 <ion-col class="ion-no-padding">
@@ -192,7 +195,7 @@
           <!-- ******************************** -->
           <ion-card-header mode="md">
             <ion-card-title style="font-size: 16px"
-              >ช่วงอายุของคนขับ</ion-card-title
+              >ช่วงอายุของคนขับ (ผู้เช่า)</ion-card-title
             >
           </ion-card-header>
 
