--- a/src/app/air-ticket/air-ticket.page.html
+++ b/src/app/air-ticket/air-ticket.page.html
@@ -35,6 +35,7 @@
         >
           <ion-list
             style="
+              background: white;
               border-bottom-right-radius: 10px;
               border-bottom-left-radius: 10px;
             "
@@ -154,28 +155,52 @@
               </ion-select>
             </ion-item>
             <ion-item slot="header" color="tertiary" lines="full" mode="md">
-              <ion-checkbox
-                (click)="p0Prompt($event)"
-                slot="start"
-              ></ion-checkbox>
               <ion-label> ผู้ใหญ่ (12ปีขึ้นไป) </ion-label>
-              <ion-label slot="end"> {{people0}} คน </ion-label>
+              <ion-icon
+                name="remove-circle"
+                color="danger"
+                style="margin-right: 10px"   
+                (click)="decrementPeople0()"
+              ></ion-icon>
+              {{people0}}
+              <ion-icon
+                name="add-circle"
+                color="danger"
+                style="margin-left: 10px"
+                (click)="incrementPeople0()"
+              ></ion-icon>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
               <ion-label> เด็ก (2-11ปี) </ion-label>
-              <ion-label slot="end"> {{people1}} คน </ion-label>
-              <ion-checkbox
-                (click)="p1Prompt($event)"
-                slot="start"
-              ></ion-checkbox>
+              <ion-icon
+                name="remove-circle"
+                color="danger"
+                style="margin-right: 10px"
+                (click)="decrementPeople1()"
+              ></ion-icon>
+              {{people1}}
+              <ion-icon
+                name="add-circle"
+                color="danger"
+                style="margin-left: 10px"
+                (click)="incrementPeople1()"
+              ></ion-icon>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
               <ion-label> ทารก (น้อยกว่า2ปี) </ion-label>
-              <ion-label slot="end"> {{people2}} คน </ion-label>
-              <ion-checkbox
-                (click)="p2Prompt($event)"
-                slot="start"
-              ></ion-checkbox>
+              <ion-icon
+                name="remove-circle"
+                color="danger"
+                style="margin-right: 10px"
+                (click)="decrementPeople2()"
+              ></ion-icon>
+              {{people2}}
+              <ion-icon
+                name="add-circle"
+                color="danger"
+                style="margin-left: 10px"
+                (click)="incrementPeople2()"
+              ></ion-icon>
             </ion-item>
 
             <ion-accordion-group color="tertiary" mode="ios">
@@ -194,6 +219,7 @@
                 ></ion-datetime>
               </ion-accordion>
             </ion-accordion-group>
+            <br />
             <ion-button
               color="danger"
               class="ion-no-margin"
@@ -210,6 +236,7 @@
         >
           <ion-list
             class="animate__animated animate__slideInUp animate__fast ion-no-padding border-radius"
+            style="background: white"
           >
             <ion-item lines="full" color="tertiary">
               <ion-select
@@ -325,20 +352,53 @@
               </ion-select>
             </ion-item>
 
-            <ion-item color="tertiary" lines="full" mode="md">
+                        <ion-item slot="header" color="tertiary" lines="full" mode="md">
               <ion-label> ผู้ใหญ่ (12ปีขึ้นไป) </ion-label>
-              <ion-label slot="end"> 5 คน </ion-label>
-              <ion-checkbox slot="start"></ion-checkbox>
+              <ion-icon
+                name="remove-circle"
+                color="danger"
+                style="margin-right: 10px"   
+                (click)="decrementPeople0()"
+              ></ion-icon>
+              {{people0}}
+              <ion-icon
+                name="add-circle"
+                color="danger"
+                style="margin-left: 10px"
+                (click)="incrementPeople0()"
+              ></ion-icon>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
               <ion-label> เด็ก (2-11ปี) </ion-label>
-              <ion-label slot="end"> 5 คน </ion-label>
-              <ion-checkbox slot="start"></ion-checkbox>
+              <ion-icon
+                name="remove-circle"
+                color="danger"
+                style="margin-right: 10px"
+                (click)="decrementPeople1()"
+              ></ion-icon>
+              {{people1}}
+              <ion-icon
+                name="add-circle"
+                color="danger"
+                style="margin-left: 10px"
+                (click)="incrementPeople1()"
+              ></ion-icon>
             </ion-item>
             <ion-item color="tertiary" lines="full" mode="md">
               <ion-label> ทารก (น้อยกว่า2ปี) </ion-label>
-              <ion-label slot="end"> 5 คน </ion-label>
-              <ion-checkbox slot="start"></ion-checkbox>
+              <ion-icon
+                name="remove-circle"
+                color="danger"
+                style="margin-right: 10px"
+                (click)="decrementPeople2()"
+              ></ion-icon>
+              {{people2}}
+              <ion-icon
+                name="add-circle"
+                color="danger"
+                style="margin-left: 10px"
+                (click)="incrementPeople2()"
+              ></ion-icon>
             </ion-item>
 
             <ion-accordion-group color="tertiary" mode="ios">
@@ -374,6 +434,7 @@
                 ></ion-datetime>
               </ion-accordion>
             </ion-accordion-group>
+            <br />
             <ion-button
               color="danger"
               class="ion-no-margin"
@@ -382,7 +443,6 @@
               >เลือก</ion-button
             >
           </ion-list>
-          <br />
         </div>
       </div>
     </ion-card-content>
