--- a/src/app/select-car/select-car.page.html
+++ b/src/app/select-car/select-car.page.html
@@ -8,22 +8,22 @@
 </ion-header>
 
 <ion-content>
-  <ion-item color="light">
+  <ion-item lines="full" color="light">
     <ion-grid>
       <ion-row>
         <ion-col size="6">
-          <ion-label >
+          <ion-label>
             <h2><b>ขอนแก่น-สนามบิน</b></h2>
           </ion-label>
-          <ion-label >
+          <ion-label>
             <small>30 พ.ค.,12.00 น.- 1 มิ.ย.,12.00 น.</small>
           </ion-label>
         </ion-col>
-        <ion-col size="6" class="ion-no-padding ion-text-right">
-          <ion-text>
-            <ion-icon name="pencil-outline"></ion-icon>
-            แก้ไขข้อมูล
-          </ion-text>
+        <ion-col size="6" class="ion-text-right">
+          <ion-chip color="danger">
+            <ion-icon name="pencil" color="primary"></ion-icon>
+            <ion-label color="danger">แก้ใขข้อมูล</ion-label>
+          </ion-chip>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -90,7 +90,7 @@
                 </ion-label>
               </ion-col>
             </ion-row>
-            <br>
+            <br />
             <ion-row>
               <ion-col size="6">
                 <ion-label>
@@ -103,10 +103,12 @@
                 ดีมาก
               </ion-col>
               <ion-col class="ion-no-padding ion-text-right">
-                <ion-label >
-                  <h3><b>
-                    <span>ยอดรวม 10,000<small>&nbsp;THB</small></span>
-                  </b></h3>
+                <ion-label>
+                  <h3>
+                    <b>
+                      <span>ยอดรวม 10,000<small>&nbsp;THB</small></span>
+                    </b>
+                  </h3>
                 </ion-label>
               </ion-col>
             </ion-row>
@@ -184,7 +186,7 @@
                 </ion-label>
               </ion-col>
             </ion-row>
-            <br>
+            <br />
 
             <ion-row>
               <ion-col size="6">
@@ -198,10 +200,12 @@
                 ดีมาก
               </ion-col>
               <ion-col class="ion-no-padding ion-text-right">
-                <ion-label >
-                  <h3><b>
-                    <span>ยอดรวม 4,000<small>&nbsp;THB</small></span>
-                  </b></h3>
+                <ion-label>
+                  <h3>
+                    <b>
+                      <span>ยอดรวม 4,000<small>&nbsp;THB</small></span>
+                    </b>
+                  </h3>
                 </ion-label>
               </ion-col>
             </ion-row>
