--- a/src/app/cart-checkout/cart-checkout.page.html
+++ b/src/app/cart-checkout/cart-checkout.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-toolbar color="danger">
-    <ion-icon name="chevron-back-outline" routerLink="/cart-edit"></ion-icon>
+    <ion-buttons slot="start">
+      <ion-back-button text="" icon="chevron-back-outline"></ion-back-button>
+    </ion-buttons>
     <ion-title>CartCheckout</ion-title>
   </ion-toolbar>
 </ion-header>
